--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <module>lesson-utils</module>
         <module>lesson-1</module>
         <module>lesson-2</module>
-	<module>lesson-3</module>
+#       <module>lesson-3</module>
     </modules>
 
     <dependencies>
