--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
             <version>2.5.1</version>
         </dependency>
     </dependencies>
-   <distributionManagement>
+    <distributionManagement>
   <repository>
     <id>nexus</id>
     <url>http://3.6.213.189:8081/nexus/content/repositories/releases</url>
@@ -75,9 +75,9 @@
 
         </plugins>
     </build>
-  <repositories>
+    <repositories>
      <repository>
-      <id>customrepo</id>
+      <id>custom</id>
       <url>https://watt-db1.workfusion.com/nexus/content/repositories/ml-sdk/</url>
      </repository>
     </repositories>
