--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
     </build>
     <repositories>
      <repository>
-      <id>custom</id>
+      <id>jboss</id>
       <url>https://watt-db1.workfusion.com/nexus/content/repositories/ml-sdk</url>
      </repository>
     </repositories>
