--- a/pom.xml
+++ b/pom.xml
@@ -45,11 +45,17 @@
             <version>2.5.1</version>
         </dependency>
     </dependencies>
-    <distributionManagement>
+   <!-- <distributionManagement>
   <repository>
     <id>nexus</id>
     <url>http://18.232.116.33:8081/nexus/content/repositories/testing/</url>
   </repository>
+</distributionManagement> -->
+    <distributionManagement>
+   <snapshotRepository>
+      <id>nexus-snapshots</id>
+      <url>http://localhost:8081/nexus/content/repositories/snapshots</url>
+   </snapshotRepository>
 </distributionManagement>
 
     <build>
@@ -57,7 +63,8 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.3</version>
+                 <version>${maven-deploy-plugin.version}</version>
+               <!-- <version>3.3</version> -->
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
