--- a/pom.xml
+++ b/pom.xml
@@ -63,8 +63,8 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                 <version>${maven-deploy-plugin.version}</version>
-               <!-- <version>3.3</version> -->
+               <!--  <version>${maven-deploy-plugin.version}</version> -->
+                <version>3.3</version> 
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
