--- a/lesson-1/pom.xml
+++ b/lesson-1/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <groupId>com.workfusion.lab</groupId>
         <artifactId>ml-sdk-lessons</artifactId>
-        <version>1.0</version>
+        <version>${project.parent.version}</version>
     </parent>
 
     <groupId>com.workfusion.lab</groupId>
     <artifactId>lesson-1</artifactId>
-    <version>1.0</version>
+    <version>1.0.1</version>
 
     <properties>
         <hypermodel.id>ml-sdk-lesson-1</hypermodel.id>
