--- a/lesson-1/pom.xml
+++ b/lesson-1/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>com.workfusion.lab</groupId>
     <artifactId>lesson-1</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <properties>
         <hypermodel.id>ml-sdk-lesson-1</hypermodel.id>
