--- a/lesson-2/pom.xml
+++ b/lesson-2/pom.xml
@@ -10,6 +10,7 @@
 
     <groupId>com.workfusion.lab</groupId>
     <artifactId>lesson-2</artifactId>
+    <packaging>jar</packaging>
     <version>1.0</version>
 
     <properties>
