--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>xmlunit-core</artifactId>
             <version>2.5.1</version>
         </dependency>
+        <dependency>
+			<groupId>org.codehaus.mojo</groupId>
+			<artifactId>sonar-maven-plugin</artifactId>
+			<version>3.6.0.1398</version>
+		</dependency>
     </dependencies>
     <distributionManagement>
   <repository>
