--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
 			<artifactId>sonar-maven-plugin</artifactId>
 			<version>3.7.0.1746</version>
 		</dependency>
+	    <dependency>
+    <groupId>org.sonarsource.sonarqube</groupId>
+    <artifactId>sonar-plugin-api</artifactId>
+    <version>7.6</version>
+</dependency>
+
     </dependencies>
     <distributionManagement>
   <repository>
